#115 adapt CardMapper